Ported to the new Jakarta framework.  Compiles in Java 1.8 and 15